--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ env_logger = "0.11.6"
 libp2p = { version = "0.54.1", features = ["full"] }
 log = "0.4.25"
 prost = "0.13.5"
+rs_merkle = "1.5.0"
+rs_sha256 = "0.1.3"
 serde = { version = "1.0.217", features = ["default", "serde_derive"] }
+serde_cbor = "0.11.2"
 thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-util = "0.7.13"
