--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
 name = "libp2p-file-sharing"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
 async-trait = "0.1.86"
+clap = {version = "4.5.32", features=["derive", "string", "env"] }
+clap_derive = { version = "4.0.0-rc.1" }
 ctrlc = { version = "3.4.5", features=["termination"] }
 env_logger = "0.11.6"
+homedir = "0.3.4"
 libp2p = { version = "0.54.1", features = ["full"] }
 log = "0.4.25"
 prost = "0.13.5"
+rocksdb = "0.23.0"
 rs_merkle = "1.5.0"
 rs_sha256 = "0.1.3"
 serde = { version = "1.0.217", features = ["default", "serde_derive"] }
@@ -19,7 +23,7 @@ thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-util = "0.7.13"
 tonic = "0.12.3"
-rocksdb = "0.23.0"
+
 
 [build-dependencies]
-tonic-build = "0.10"
+tonic-build = "0.12"
