--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+async-channel = "2.3.1"
 async-trait = "0.1.86"
 clap = {version = "4.5.32", features=["derive", "string", "env"] }
 clap_derive = { version = "4.0.0-rc.1" }
