--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libp2p-file-sharing"
+name = "dfs"
 version = "0.1.0"
 edition = "2021"
 
@@ -22,8 +22,9 @@ serde = { version = "1.0.217", features = ["default", "serde_derive"] }
 serde_cbor = "0.11.2"
 thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full"] }
+tokio-stream = "0.1.17"
 tokio-util = "0.7.13"
 tonic = "0.12.3"
 
 [build-dependencies]
-tonic-build = "0.12"
+tonic-build = "*"
